fix javadoc on Java 17 & fix tests
Signed-off-by: Pawel Leszczynski <leszczynski.pawel@gmail.com>